# HR_API

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  schemas.py
