[project]
name = "hr-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "fastapi==0.121.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.11",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pymysql==1.1.1",
    "python-dotenv==1.2.1",
    "python-multipart>=0.0.20",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
]
